Reorganize major game concepts into folders

--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -98,9 +98,9 @@
     <Compile Include="Base\AgentBase.cs" />
     <Compile Include="Base\AttackModel.cs" />
     <Compile Include="Base\BaseSpecModel.cs" />
-    <Compile Include="Base\CreateResourcesArgs.cs" />
-    <Compile Include="Base\DrawArgs.cs" />
-    <Compile Include="Base\DrawLayer.cs" />
+    <Compile Include="Graphics\CreateResourcesArgs.cs" />
+    <Compile Include="Graphics\DrawArgs.cs" />
+    <Compile Include="Graphics\DrawLayer.cs" />
     <Compile Include="Base\HexCoords.cs" />
     <Compile Include="Base\HexUtils.cs" />
     <Compile Include="Base\IAgent.cs" />
@@ -108,21 +108,21 @@
     <Compile Include="Base\IAgentStats.cs" />
     <Compile Include="Base\IBehaviourComponent.cs" />
     <Compile Include="Base\IGameObject.cs" />
-    <Compile Include="Base\IGraphicsComponent.cs" />
+    <Compile Include="Graphics\IGraphicsComponent.cs" />
     <Compile Include="Base\IIndicator.cs" />
     <Compile Include="Base\IMapProvider.cs" />
     <Compile Include="Base\IndicatorCollection.cs" />
-    <Compile Include="Base\Map.cs" />
-    <Compile Include="Base\MapPath.cs" />
-    <Compile Include="Base\Mob.cs" />
+    <Compile Include="Map\Map.cs" />
+    <Compile Include="Map\MapPath.cs" />
+    <Compile Include="Mobs\MobBase.cs" />
     <Compile Include="Base\Modifier.cs" />
     <Compile Include="Base\ModifierCollection.cs" />
     <Compile Include="Base\ModifierPriority.cs" />
-    <Compile Include="Base\StyleArgs.cs" />
-    <Compile Include="Base\Targetting.cs" />
-    <Compile Include="Base\Tile.cs" />
-    <Compile Include="Base\TileDirection.cs" />
-    <Compile Include="Base\Tower.cs" />
+    <Compile Include="Graphics\StyleArgs.cs" />
+    <Compile Include="Towers\TargettingBase.cs" />
+    <Compile Include="Map\Tile.cs" />
+    <Compile Include="Map\TileDirection.cs" />
+    <Compile Include="Towers\TowerBase.cs" />
     <Compile Include="CanvasUtils.cs" />
     <Compile Include="DebugUtils.cs" />
     <Compile Include="EnumUtils.cs" />
@@ -138,19 +138,13 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\BlockMob.cs" />
-    <Compile Include="Models\BlockMobBaseIndicator.cs" />
-    <Compile Include="Models\EmptyBrain.cs" />
-    <Compile Include="Models\GunTower.cs" />
-    <Compile Include="Models\GunTowerBaseBehaviour.cs" />
-    <Compile Include="Models\GunTowerBaseIndicator.cs" />
-    <Compile Include="Models\GunTowerBaseModifier.cs" />
-    <Compile Include="Models\HexagonGraphics.cs" />
-    <Compile Include="Models\LabelIndicator.cs" />
-    <Compile Include="Models\NilTower.cs" />
-    <Compile Include="Models\PathMobBehaviour.cs" />
-    <Compile Include="Models\RadiusExitTargetting.cs" />
-    <Compile Include="Models\VoidTower.cs" />
+    <Compile Include="Mobs\BlockMob.cs" />
+    <Compile Include="Mobs\BlockMobBaseIndicator.cs" />
+    <Compile Include="Base\NilBehaviour.cs" />
+    <Compile Include="Graphics\HexagonGraphics.cs" />
+    <Compile Include="Graphics\LabelIndicator.cs" />
+    <Compile Include="Mobs\PathMobBehaviour.cs" />
+    <Compile Include="Towers\RadiusExitTargetting.cs" />
     <Compile Include="NilGameController.cs" />
     <Compile Include="OverlayController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -159,6 +153,12 @@
     <Compile Include="Services\EmptyConfig.cs" />
     <Compile Include="Services\IConfig.cs" />
     <Compile Include="TaskExtensions.cs" />
+    <Compile Include="Towers\GunTower.cs" />
+    <Compile Include="Towers\GunTowerBaseBehaviour.cs" />
+    <Compile Include="Towers\GunTowerBaseIndicator.cs" />
+    <Compile Include="Towers\GunTowerBaseModifier.cs" />
+    <Compile Include="Towers\NilTower.cs" />
+    <Compile Include="Towers\VoidTower.cs" />
     <Compile Include="Win2d\PointerData.cs" />
     <Compile Include="Win2d\Win2dProvider.cs" />
   </ItemGroup>
