--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -112,6 +112,8 @@
     <Compile Include="Base\IIndicator.cs" />
     <Compile Include="Base\IMapProvider.cs" />
     <Compile Include="Base\IndicatorCollection.cs" />
+    <Compile Include="Map\HexGridCollection.cs" />
+    <Compile Include="Map\HexGridPopulator.cs" />
     <Compile Include="Map\Map.cs" />
     <Compile Include="Map\MapPath.cs" />
     <Compile Include="Mobs\MobBase.cs" />
