--- a/CatchTests/CatchTests.csproj
+++ b/CatchTests/CatchTests.csproj
@@ -95,7 +95,7 @@
     <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BasicMapTests.cs" />
+    <Compile Include="HexGridCollectionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TargettingTests.cs" />
     <Compile Include="TileDirectionTests.cs" />
