--- a/CatchLibrary/CatchLibrary.csproj
+++ b/CatchLibrary/CatchLibrary.csproj
@@ -44,7 +44,7 @@
     <Compile Include="HexGrid\HexGridCollection.cs" />
     <Compile Include="HexGrid\HexGridPopulator.cs" />
     <Compile Include="HexGrid\HexUtils.cs" />
-    <Compile Include="HexGrid\TileDirection.cs" />
+    <Compile Include="HexGrid\HexDirection.cs" />
     <Compile Include="IntExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\EmitScriptEntryModel.cs" />
