--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -125,7 +125,7 @@
     <Compile Include="FieldController.cs" />
     <Compile Include="FloatExtentions.cs" />
     <Compile Include="GameState.cs" />
-    <Compile Include="GameStateChangeRequestEventArgs.cs" />
+    <Compile Include="GameStateArgs.cs" />
     <Compile Include="IGameController.cs" />
     <Compile Include="IViewportController.cs" />
     <Compile Include="LevelController.cs" />
