--- a/Catch/project.json
+++ b/Catch/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Newtonsoft.Json": "9.0.1",
     "Win2D.uwp": "1.18.0"
   },
   "frameworks": {
