MGC now loads initial map from slightly less hard-coded location

--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -89,6 +89,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Content Include="Assets\maps\MapOne.json" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -191,6 +192,7 @@
       <Name>CatchLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
