--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Base\AgentBase.cs" />
     <Compile Include="Base\AttackModel.cs" />
     <Compile Include="Base\BaseSpecModel.cs" />
+    <Compile Include="Base\IUpdatable.cs" />
     <Compile Include="Towers\TowerHoverIndicator.cs" />
     <Compile Include="PlayerModel.cs" />
     <Compile Include="ScriptCommand.cs" />
@@ -110,7 +111,7 @@
     <Compile Include="Base\IAgentStats.cs" />
     <Compile Include="Base\IBehaviourComponent.cs" />
     <Compile Include="Base\IGameObject.cs" />
-    <Compile Include="Graphics\IGraphicsComponent.cs" />
+    <Compile Include="Graphics\IGraphics.cs" />
     <Compile Include="Base\IIndicator.cs" />
     <Compile Include="Base\IMapProvider.cs" />
     <Compile Include="Base\IndicatorCollection.cs" />
