--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -104,7 +104,14 @@
     <Compile Include="Base\AttackModel.cs" />
     <Compile Include="Base\BaseSpecModel.cs" />
     <Compile Include="Base\IUpdatable.cs" />
+    <Compile Include="Services\EventArgsBase.cs" />
+    <Compile Include="Services\HoverEventArgs.cs" />
+    <Compile Include="Services\KeyPressEventArgs.cs" />
     <Compile Include="LevelUi\StatusBar.cs" />
+    <Compile Include="Services\ListExtensions.cs" />
+    <Compile Include="Services\PanByEventArgs.cs" />
+    <Compile Include="Services\IScreenManager.cs" />
+    <Compile Include="Services\TouchEventArgs.cs" />
     <Compile Include="Towers\BuyTowerCommand.cs" />
     <Compile Include="Towers\TowerHoverIndicator.cs" />
     <Compile Include="PlayerModel.cs" />
@@ -137,10 +144,10 @@
     <Compile Include="FloatExtentions.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="GameStateArgs.cs" />
-    <Compile Include="IGameController.cs" />
-    <Compile Include="IViewportController.cs" />
+    <Compile Include="Services\IScreenController.cs" />
+    <Compile Include="Services\IViewportController.cs" />
     <Compile Include="LevelController.cs" />
-    <Compile Include="MainGameController.cs" />
+    <Compile Include="Services\DelegatingScreenManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -151,7 +158,7 @@
     <Compile Include="Graphics\LabelIndicator.cs" />
     <Compile Include="Mobs\PathMobBehaviour.cs" />
     <Compile Include="Towers\RadiusExitTargetting.cs" />
-    <Compile Include="NilGameController.cs" />
+    <Compile Include="Services\NilScreenController.cs" />
     <Compile Include="OverlayController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectExtensions.cs" />
@@ -169,6 +176,7 @@
     <Compile Include="UiStateModel.cs" />
     <Compile Include="Win2d\PointerData.cs" />
     <Compile Include="Win2d\Win2dProvider.cs" />
+    <Compile Include="Services\ZoomToPointEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
