--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -170,9 +170,8 @@
     <Compile Include="Towers\GunTowerBaseBehaviour.cs" />
     <Compile Include="Towers\GunTowerBaseIndicator.cs" />
     <Compile Include="Towers\GunTowerBaseModifier.cs" />
-    <Compile Include="Towers\NilTower.cs" />
     <Compile Include="Towers\TowerTileIndicator.cs" />
-    <Compile Include="Towers\VoidTower.cs" />
+    <Compile Include="Towers\EmptyTower.cs" />
     <Compile Include="UiStateModel.cs" />
     <Compile Include="Win2d\PointerData.cs" />
     <Compile Include="Win2d\Win2dProvider.cs" />
