--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -142,7 +142,7 @@
     <Compile Include="Graphics\IGraphicsResource.cs" />
     <Compile Include="Base\IIndicator.cs" />
     <Compile Include="Base\IndicatorCollection.cs" />
-    <Compile Include="Map\Map.cs" />
+    <Compile Include="Map\MapModel.cs" />
     <Compile Include="Map\MapPath.cs" />
     <Compile Include="Mobs\MobBase.cs" />
     <Compile Include="Base\Modifier.cs" />
