--- a/CatchLibrary/CatchLibrary.csproj
+++ b/CatchLibrary/CatchLibrary.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DebugUtils.cs" />
+    <Compile Include="Heap\MinHeap.cs" />
     <Compile Include="HexGrid\HexCoords.cs" />
     <Compile Include="HexGrid\HexGridCollection.cs" />
     <Compile Include="HexGrid\HexCollectionPopulator.cs" />
